build: update project configurations and cli package

--- a/.release-it.json
+++ b/.release-it.json
@@ -1,8 +1,21 @@
 {
-  "github": {
-    "release": true
-  },
-  "git": {
-    "commitMessage": "chore: release v${version}"
+	"$schema": "./node_modules/release-it/schema/release-it.json",
+	"github": {
+	  "requireBranch": "main",
+	  "commitMessage": "chore: release v${version}",
+	  "tagName": "v${version}",
+	  "push": true
+	},
+	"npm": {
+	  "publish": true,
+	  "timeout": 60000
+	},
+	"git": {
+	  "commitMessage": "chore: release v${version}",
+	  "pushRepo": "main"
+	},
+	"hooks": {
+	  "before:init": "bun run build"
+	}
   }
-}
+  
