--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wrikka/cli",
   "version": "0.1.0",
-  "main": "src/index.ts",
+  "main": "./dist/index.js",
   "type": "module",
   "bin": {
     "wrikka": "src/index.ts"
@@ -12,5 +12,15 @@
   },
   "dependencies": {
     "@clack/prompts": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "^24.9.2",
+    "tsdown": "^0.15.12"
+  },
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./package.json": "./package.json"
   }
 }
