--- a/packages/wdocs/package.json
+++ b/packages/wdocs/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@unocss/nuxt": "^66.5.4",
     "@unocss/vite": "^66.5.4",
     "unocss": "^66.5.4",
     "vite-plugin-checker": "^0.11.0",
