chore: update release config and biome settings

--- a/.release-it.json
+++ b/.release-it.json
@@ -12,7 +12,7 @@
 	},
 	"git": {
 	  "commitMessage": "chore: release v${version}",
-	  "pushRepo": "main"
+	  "pushRepo": "origin"
 	},
 	"hooks": {
 	  "before:init": "bun run build"
