--- a/packages/wdocs/package.json
+++ b/packages/wdocs/package.json
@@ -8,7 +8,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "biome lint --write",
-    "review": "bun update:deps && bun lint && bun build"
+    "review": "bun run lint && bun run build"
   },
   "dependencies": {
     "nuxt": "^4.2.0",
