--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wrikka-learn",
+  "name": "wdocs",
   "packageManager": "bun@1.3.1",
   "workspaces": [
     "examples/*",
@@ -18,5 +18,6 @@
   },
   "devDependencies": {
     "turbo": "^2.5.8"
-  }
+  },
+  "version": "0.0.1"
 }
