feat(wdocs): refactor to full nuxt application structure

--- a/packages/wdocs/package.json
+++ b/packages/wdocs/package.json
@@ -1,25 +1,38 @@
 {
-  "name": "wdocs",
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "biome lint --write",
-    "review": "bun run lint && bun run build"
-  },
-  "dependencies": {
-    "nuxt": "^4.2.0",
-    "vue": "^3.5.22"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^2.3.2",
-    "@unocss/nuxt": "^66.5.4",
-    "@unocss/vite": "^66.5.4",
-    "unocss": "^66.5.4",
-    "vite-plugin-checker": "^0.11.0",
-    "vue-tsc": "^3.1.2"
-  }
+	"name": "wdocs",
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"lint": "bunx vue-tsc --noEmit && bunx oxlint --fix",
+		"format": "dprint fmt",
+		"review": "bun run update:deps && bun run format && bun run lint && bun run build",
+		"update:deps": "bunx taze -r"
+	},
+	"dependencies": {
+		"@nuxt/icon": "^2.1.0",
+		"@nuxtjs/color-mode": "^4.0.0",
+		"@pinia/nuxt": "^0.11.3",
+		"@vueuse/nuxt": "^14.1.0",
+		"vue": "^3.5.25",
+		"zod": "^4.1.13"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20251212.0",
+		"@unocss/nuxt": "^66.5.10",
+		"@unocss/preset-typography": "^66.5.10",
+		"@unocss/reset": "^66.5.10",
+		"@vue-macros/nuxt": "^3.1.1",
+		"dprint": "^0.50.2",
+		"nuxt": "^4.2.2",
+		"nuxt-mcp-dev": "^0.3.1",
+		"oxlint": "^1.32.0",
+		"taze": "^19.9.2",
+		"typescript": "^5.9.3",
+		"unocss": "^66.5.10",
+		"vue-tsc": "^3.1.8"
+	}
 }
