--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,26 @@
-# Turborepo
-.turbo
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+# Node dependencies
+node_modules
 
 # Logs
 logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Dependency directories
-node_modules/
-
-# Environment variables
-.env
-.env.local
-.env.development
-.env.test
-.env.production
-
-# IDE
-.vscode/
-.idea/
-
-# Build output
-dist/
-build/
-out/
-
-# TypeScript
-*.tsbuildinfo
 
 # Misc
 .DS_Store
+.fleet
+.idea
+
+# Local env files
+.env
+.env.*
+!.env.example
+
+.turbo
