--- a/packages/wdocs/package.json
+++ b/packages/wdocs/package.json
@@ -33,6 +33,7 @@
 		"taze": "^19.9.2",
 		"typescript": "^5.9.3",
 		"unocss": "^66.5.10",
+		"vite-plugin-checker": "^0.12.0",
 		"vue-tsc": "^3.1.8"
 	}
 }
