--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "wdocs",
+  "version": "0.0.0",
+  "private": true,
   "packageManager": "bun@1.3.1",
   "workspaces": [
     "examples/*",
@@ -7,14 +9,16 @@
   ],
   "scripts": {
     "prepare": "bunx lefthook install",
-    "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "format": "turbo format",
+    "test": "turbo test",
     "clean": "bunx rimraf dist node_modules .turbo",
-    "update:deps": "bunx taze -r -w",
+    "update:deps": "bunx taze -r -w && bun install",
     "check:unused": "bunx knip",
     "release": "bunx release-it",
-    "review": "bun update:deps && bun lint && bun build"
+    "review": "bun update:deps && bun format && bun lint && bun test && bun build"
   },
   "devDependencies": {
     "turbo": "^2.6.3"
