--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "wdocs",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "bun@1.3.1",
+  "packageManager": "bun@1.3.4",
   "workspaces": [
-    "examples/*",
-    "packages/*"
+    "packages/*",
+    "docs"
   ],
   "scripts": {
     "prepare": "bunx lefthook install",
