--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,7 @@
       "outputs": ["dist/**", ".output/**"]
     },
     "dev": {
+      "dependsOn": ["^build"],
       "cache": false,
       "persistent": true
     },
