--- a/packages/wdocs/package.json
+++ b/packages/wdocs/package.json
@@ -7,36 +7,50 @@
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
-    "lint": "oxlint --fix",
-    "format": "oxlint --fix"
+    "preview": "nuxt preview",
+    "lint": "vue-tsc --noEmit && biome lint --write .",
+    "test": "vitest run",
+    "verify": "bun run lint && bun run test",
+    "postinstall": "nuxt prepare"
   },
-
   "files": [
     "src"
   ],
   "dependencies": {
-    "@nuxt/kit": "^4.2.2",
     "@nuxt/icon": "^2.1.1",
+    "@nuxt/kit": "^4.2.2",
     "@nuxtjs/color-mode": "^4.0.0",
     "@pinia/nuxt": "^0.11.3",
     "@shikijs/markdown-it": "^3.20.0",
     "@shikijs/themes": "^3.20.0",
     "@unocss/nuxt": "^66.5.10",
     "@vue-macros/nuxt": "^3.1.1",
+    "@vueuse/components": "^14.1.0",
+    "@vueuse/core": "^14.1.0",
     "@vueuse/nuxt": "^14.1.0",
+    "execa": "^9.6.1",
+    "fuse.js": "^7.1.0",
+    "glob": "^13.0.0",
     "gray-matter": "^4.0.3",
-    "glob": "^^10.3.10",
     "markdown-it": "^14.1.0",
-    "markdown-it-anchor": "^9.2.0",
     "markdown-it-container": "^4.0.0",
     "shiki": "^3.20.0",
-    "execa": "^9.1.0"
+    "simple-git": "^3.30.0"
   },
   "devDependencies": {
-    "@types/markdown-it-anchor": "^",
-    "@types/node": "^25.0.2",
+    "@biomejs/biome": "^2.3.10",
+    "@shikijs/transformers": "^3.20.0",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^25.0.3",
+    "@vitest/ui": "4.0.15",
+    "bun-types": "^1.3.5",
+    "happy-dom": "^14.12.3",
+    "markdown-it-anchor": "^9.2.0",
     "nuxt": "^4.2.2",
-    "oxlint": "^1.33.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "unocss": "^66.5.10",
+    "vitest": "^4.0.16",
+    "vue": "^3.5.26",
+    "vue-tsc": "^3.2.1"
   }
 }
