--- a/packages/wdocs/package.json
+++ b/packages/wdocs/package.json
@@ -28,6 +28,7 @@
     "@vueuse/components": "^14.1.0",
     "@vueuse/core": "^14.1.0",
     "@vueuse/nuxt": "^14.1.0",
+    "@wdocs/markdown-rs": "workspace:*",
     "execa": "^9.6.1",
     "fuse.js": "^7.1.0",
     "glob": "^13.0.0",
@@ -35,12 +36,17 @@
     "markdown-it": "^14.1.0",
     "markdown-it-container": "^4.0.0",
     "shiki": "^3.20.0",
-    "simple-git": "^3.30.0"
+    "simple-git": "^3.30.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.10",
+    "@iconify-json/heroicons": "^1.2.3",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/uil": "^1.2.3",
     "@shikijs/transformers": "^3.20.0",
     "@types/markdown-it": "^14.1.2",
+    "@types/markdown-it-anchor": "^7.0.0",
     "@types/node": "^25.0.3",
     "@vitest/ui": "4.0.15",
     "bun-types": "^1.3.5",
