--- a/packages/markdown-rs/Cargo.toml
+++ b/packages/markdown-rs/Cargo.toml
@@ -26,6 +26,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 
 pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
+pulldown-cmark-toc = "0.7.0"
 syntect = "5.3.0"
 v_htmlescape = "0.15.8"
 
