--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
   "type": "module",
   "scripts": {
     "prepare": "lefthook install",
-    "postinstall": "taze -r -w -i",
     "dev": "turbo dev",
     "lint": "turbo lint",
     "build": "turbo build",
     "format": "turbo format",
     "test": "turbo test",
     "verify": "turbo verify",
-    "start": "turbo watch verify",
-    "update:deps": "taze -r -w -i"
+    "start": "turbo watch verify"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "lefthook": "^1.13.6",
-    "taze": "^0.16.9",
+    "@biomejs/biome": "^2.3.10",
+    "lefthook": "^2.0.12",
+    "taze": "^19.9.2",
     "turbo": "^2.7.1",
     "typescript": "^5.9.3"
   }
